# KernelAgent

./: .gitignore  CONTRIBUTING.md  DEEPSEEK_R1_QUICKSTART.md  MODEL_BACKENDS.md  README.md  e2e_test.py  example_usage.py  generate_kernel.py  kernelbench.db  list_models.py  performance_config.env  pyproject.toml  requirements.txt  triton_ui.py
Fuser/: __init__.py  auto_agent.py  cli.py  code_extractor.py  compose_end_to_end.py  config.py  constants.py  dedup.py  dispatch_kernel_agent.py  event_adapter.py  fuser_ui.py  logging_utils.py  orchestrator.py  paths.py  pipeline.py  pipeline_ui.py  prompting.py  runner.py  runner_util.py  subgraph_extractor.py  subgraph_validator.py  worker.py
config_examples/: deepseek_r1_config.json
configs/: e2e_test.yaml
docs/: technique_clustering_design.md
examples/: deepseek_r1_example.py  element_add.py  example_with_additional_code.py  fused_dcpp.py  fused_reduction_gemm.py  run_opt_manager.py  test_deepseek_r1_loading.py  triton_01_element_add.py  triton_02_fused_reduction_gemm.py  triton_03_fused_dcpp.py  triton_04_fused_dropout_residual.py
kernel_perf_agent/: README.md  __init__.py
kernel_perf_util/: README.md
oink/: README.md  pyproject.toml
oink/.codex/plans/: rmsnorm-concision-plan.md  rmsnorm-paulius-smallm-plan.md
oink/benchmarks/: README.md
oink/benchmarks/benchmark/: bench_utils.py  benchmark_cross_entropy_sm100.py  benchmark_cudagraph_all.py  benchmark_fused_add_rmsnorm_sm100.py  benchmark_hbm_roofline_sm100.py  benchmark_layernorm_bwd_sm100.py  benchmark_layernorm_sm100.py  benchmark_paulius_rmsnorm.py  benchmark_quack_overhead.py  benchmark_rmsnorm_all.py  benchmark_rmsnorm_bwd_sm100.py  benchmark_rmsnorm_dispatch.py  benchmark_rmsnorm_oink_vs_aten.py  benchmark_rmsnorm_sm100.py  benchmark_softmax_sm100.py  run_benchmark_cudagraph_all.sh  run_benchmark_quack_overhead.sh  run_benchmark_rmsnorm_dispatch.sh
oink/benchmarks/readme/: plot_combined_rmsnorm.py  plot_quack_style_svg.py  run_sm100_suite.py  summarize_results.py
oink/src/kernelagent_oink/: __init__.py  aten_override.py
oink/src/kernelagent_oink/blackwell/: __init__.py  _rmsnorm_impl.py  _rmsnorm_simple_weightonly.py  _rmsnorm_smallm_cuda.py  cross_entropy.py  fast_launch.py  layernorm.py  lite_quack.py  oink_custom_ops.py  rmsnorm.py  rmsnorm_with_stage2.py  softmax.py
oink/tests/: test_aten_override.py
scripts/: fuser_ui.py  list_models.py  optimization_ui.py  pipeline_ui.py  run_kernelbench_batch.py  triton_ui.py
templates/: kernel_generation.j2  kernel_refinement.j2  test_generation.j2  (+1 more)
(+228 files in other folders)
